--- a/CSS/master.css
+++ b/CSS/master.css
@@ -799,6 +799,71 @@ width: fit-content;
 }
 /* End Skills */
 
+/* Start work */
+
+.work{
+   padding-top: var(--main-padding-top);
+   padding-bottom: var(--main-padding-bottom);
+   background-color: var(--section-background);
+}
+.work .container{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   gap: 100px;
+}
+.work .container > img{
+   max-width: 100%;
+}
+.work .container .box{
+   padding: 20px 30px;
+   background-color: #f6f6f6;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   gap: 30px;
+   margin-bottom: 20px;
+   border-radius: 4px;
+   border: 2px solid white;
+   z-index: 1;
+   position: relative;
+}
+.work .container .box::before{
+   content: '';
+   position: absolute;
+   width: 0px;
+   height: 0px;
+   left: 50%;
+   top: 50%;
+   transform: translate(-50%, -50%);
+   background-color: #ededed;
+   z-index: -1;
+   transition: var(--main-transition);
+}
+.work .container .box:hover::before{
+   width: 100%;
+   height: 100%;
+}
+.work .container .box img{
+   width: 64px;
+}
+.work .container .box .text h3{
+   text-transform: capitalize;
+   margin: 0;
+   font-size: 22px;
+}
+.work .container .box .text p{
+   color: #777;
+   line-height: 1.7;
+   font-size: 18px;
+}
+@media (max-width:991px){
+   .work .container{
+      flex-direction: column;
+   }
+}
+/* End work */
+
 /* Start Animations */
 
 @keyframes popup {
