--- a/CSS/master.css
+++ b/CSS/master.css
@@ -112,7 +112,7 @@ h2.main-heading::after{
    height: 186px;
    right: 0px;
    top: 200px;
-   background: radial-gradient(var(--main-color) 24%, #fff 24%);
+   background: radial-gradient(var(--main-color) 24%, transparent 24%);
    background-size: 17px 17px;
    background-position: 0 0;
    z-index: -1;
@@ -123,7 +123,7 @@ h2.main-heading::after{
    height: 186px;
    left: 0px;
    bottom: 200px;
-   background: radial-gradient(var(--main-color) 24%, #fff 24%);
+   background: radial-gradient(var(--main-color) 24%, transparent 24%);
    background-size: 17px 17px;
    background-position: 0 0;
    z-index: -1;
@@ -787,9 +787,6 @@ width: fit-content;
 .skills .container .stats .bar{
    width: 100%;
 }
-.skills .container .stats .bar h3{
-   
-}
 .skills .container .stats .bar .progress{
    height: 30px;
    background: #eee;
@@ -1015,6 +1012,133 @@ width: fit-content;
    }
 }
 /* End Events */
+
+/* Start pricing */
+.pricing {
+   padding-top: var(--main-padding-top);
+   padding-bottom: var(--main-padding-bottom);
+   background-color: var(--section-background);
+   position: relative;
+}
+.pricing .dots-up{
+   z-index: 1;
+}
+.pricing .dots-down{
+   z-index: 1;
+}
+.pricing .container{
+   display: grid;
+   grid-template-columns: repeat(auto-fill , minmax(300px , 1fr));
+   gap: 40px;
+}
+.pricing .container .column{
+   text-align: center;
+   position: relative;
+   box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+   transition: var(--main-transition);
+   overflow: hidden;
+   background-color: #fff;
+   z-index: 2;
+}
+.pricing .container .column:nth-child(2){
+   top: -20px;
+}
+.pricing .container .column:nth-child(2) .head::before{
+   content: "Most  Popular";
+   position: absolute;
+   top: 44px;
+   right: -10px;
+   padding: 8px 26px 8px 10px;
+   background-color: var(--main-color);
+   color: white;
+   font-weight: bold;
+   font-size: 15px;
+   rotate: 90deg;
+   clip-path: polygon(0 0, 0 100%, 100% 100%, 87% 50%, 100% 0);
+}
+.pricing .container .column::before{
+   content: '';
+   width: 100%;
+   height: 43%;
+   position: absolute;
+   background-color: #f6f6f6;
+   z-index: -1;
+   top: 0;
+   left: -100%;
+   transition: var(--main-transition);
+}
+.pricing .container .column:hover::before{
+   left: 0;
+}
+.pricing .container .column::after{
+   content: '';
+   width: 100%;
+   height: 57%;
+   position: absolute;
+   background-color: #f6f6f6;
+   z-index: -1;
+   bottom: 0;
+   right: -100%;
+   transition: var(--main-transition);
+}
+.pricing .container .column:hover::after{
+   right: 0;
+}
+.pricing .container .column .head h3{
+   text-transform: capitalize;
+   font-size: 25px;
+   letter-spacing: -1px;
+   margin: 30px 0;
+}
+.pricing .container .column .head img{
+   width: 80px;
+}
+.pricing .container .column .head h2{
+   color: var(--main-color);
+   font-size: 60px;
+   margin: 30px 0 0;
+}
+.pricing .container .column .head span{
+   color: #777;
+   text-transform: capitalize;
+}
+.pricing .container .column .body{
+   margin: 30px 0;
+   border-bottom: 1px solid #eee;
+}
+.pricing .container .column .body li{
+   padding: 20px;
+   text-align: left;
+   border-top: 1px solid #eee;
+}
+.pricing .container .column .body li::before{
+   font-family: "Font Awesome 5 Free";
+   content: "\f00c";
+   font-weight: 900;
+   color: var(--main-color);
+   margin-right: 10px;
+}
+.pricing .container .column .foot{
+   padding: 15px 20px;
+   display: block;
+   width: fit-content;
+   margin: 20px auto 40px;
+   color: var(--main-color);
+   font-weight: bold;
+   border: 2px solid var(--main-color);
+   border-radius: 6px;
+   transition: var(--main-transition);
+}
+.pricing .container .column .foot:hover{
+   background-color: var(--main-color);
+   color: white;
+}
+@media (max-width: 991px) {
+   .pricing .container .column:nth-child(2){
+      top: 0;
+   }
+}
+/* End pricing */
 
 /* Start Animations */
 
