--- a/CSS/master.css
+++ b/CSS/master.css
@@ -1140,6 +1140,74 @@ width: fit-content;
 }
 /* End pricing */
 
+/* Start Top videos */
+.top-videos{
+   padding-top: var(--main-padding-top);
+   padding-bottom: var(--main-padding-bottom);
+}
+.top-videos .container .content{
+   display: flex;
+}
+.top-videos .container .content .list{
+   min-width: 300px;
+   background: #f4f4f4;
+}
+.top-videos .container .content .list .info{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 20px;
+   font-weight: bold;
+   text-transform: capitalize;
+   font-size: 12px;
+}
+.top-videos .container .content .list .info h3{
+   margin: 0;
+}
+.top-videos .container .content ul{
+   border: 1px solid var(--section-background);
+}
+.top-videos .container .content ul li{
+   padding: 20px;
+   text-align: center;
+   text-transform: capitalize;
+   border-top: 1px solid var(--section-background);
+   background-color: white;
+   transition: var(--main-transition);
+   cursor: pointer;
+   font-size: 14px;
+}
+.top-videos .container .content ul li:hover{
+   background-color: #fafafa;
+   color: var(--main-color);
+}
+.top-videos .container .content ul li span {
+   color: #777;
+   display: block;
+   margin-top: 5px;
+}
+.top-videos .container .content .vid{
+   padding: 10px;
+   background-color: #e2e2e2;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   align-items: center;
+}
+.top-videos .container .content .vid img{
+   max-width: 100%;
+}
+.top-videos .container .content .vid p{
+   width: 100%;
+   background: white;
+   padding: 20px;
+   text-align: center;
+   margin: 0;
+   text-transform: capitalize;
+   font-size: 14px;
+}
+/* End Top videos */
+
 /* Start Animations */
 
 @keyframes popup {
