--- a/CSS/master.css
+++ b/CSS/master.css
@@ -128,6 +128,19 @@ h2.main-heading::after{
    background-position: 0 0;
    z-index: -1;
 }
+.spikes{
+   position: relative;
+}
+.spikes::after{
+   content: "";
+   position: absolute;
+   width: 100%;
+   height: 30px;
+   z-index: 1;
+   background: linear-gradient(135deg, white 25%, transparent 25%) , linear-gradient(225deg, white 25%, transparent 25%);
+   background-size: 30px 30px;
+
+}
 /* End Components */
 
 /* Start Header */
@@ -1148,6 +1161,11 @@ width: fit-content;
 .top-videos .container .content{
    display: flex;
 }
+@media (max-width:991px) {
+   .top-videos .container .content{
+      flex-direction: column;
+   }
+}
 .top-videos .container .content .list{
    min-width: 300px;
    background: #f4f4f4;
@@ -1159,7 +1177,8 @@ width: fit-content;
    padding: 20px;
    font-weight: bold;
    text-transform: capitalize;
-   font-size: 12px;
+   font-size: 13px;
+   color: var(--main-color);
 }
 .top-videos .container .content .list .info h3{
    margin: 0;
@@ -1208,6 +1227,306 @@ width: fit-content;
 }
 /* End Top videos */
 
+/* Start Stats */
+.statistics{
+   padding-top: var(--main-padding-top);
+   padding-bottom: var(--main-padding-bottom);
+   background-image: url(../pictures/stats.webp);
+   background-size: cover;
+   min-height: 300px;
+   position: relative;
+}
+.statistics::before{
+   content: '';
+   width: 100%;
+   height: 100%;
+   background-color: rgb(255 255 255 / 95%);
+   position: absolute;
+   top: 0;
+}
+.statistics h2{
+   position: relative;
+   text-align: center;
+   font-size: 40px;
+   text-transform: capitalize;
+   margin: 0 auto var(--main-padding-bottom);
+}
+.statistics .container{
+   position: relative;
+   display: flex;
+   justify-content: space-between;
+   gap: 20px;
+   flex-wrap: wrap;
+}
+.statistics .container .box{
+   min-width: 250px;
+   background: white;
+   padding: 30px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   flex: 1;
+   opacity: .8;
+   position: relative;
+   transition: 1s;
+   overflow: hidden;
+}
+.statistics .container .box:hover{
+   opacity: 1;
+}
+.statistics .container .box::before,
+.statistics .container .box::after{
+   content: "";
+   height: 100%;
+   width: 2px;
+   background: var(--main-color);
+   position: absolute;
+   transition: 1s;
+}
+.statistics .container .box::before{
+   top: -100%;
+   right: 0;
+}
+.statistics .container .box:hover::before{
+   top: 0;
+}
+.statistics .container .box::after{
+   bottom: -100%;
+   left: 0;
+}
+.statistics .container .box:hover::after{
+   bottom: 0;
+}
+.statistics .container .box .num{
+   font-size: 50px;
+   font-weight: bold;
+   margin: 10px auto;
+}
+.statistics .container .box .desc{
+   color: var(--main-color);
+   font-weight: bold;
+   text-transform: capitalize;
+   font-style: italic;
+   font-size: 20px;
+}
+/* End Stats */
+
+/* Start Discount */
+.discount{
+   display: flex;
+   flex-wrap: wrap;
+   min-height: 100vh;
+}
+.discount .image{
+   flex: 1;
+   background-image: url(../pictures/discount-background\(1\).jpg);
+   background-size: cover;
+   text-align: center;
+   color: white;
+   position: relative;
+   z-index: 1;
+   padding: 30px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   animation: background-change 10s linear infinite;
+}
+.discount .image::before{
+   content: "";
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+   background-color: rgb(23 135 224 / 94%);
+   z-index: -1;
+}
+.discount .image h2{
+   font-size: 40px;
+   letter-spacing: -2px;
+}
+.discount .image p{
+   line-height: 1.6;
+   font-size: 18px;
+   max-width: 500px;
+   margin: 0;
+}
+.discount .image img{
+   width: 300px;
+   max-width: 100%;
+   margin-top: 20px;
+}
+.discount .form{
+   flex: 1;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.discount .form h2{
+   font-size: 40px;
+   letter-spacing: -2px;
+}
+.discount form *{
+   display: block;
+   padding: 15px;
+   margin-bottom: 25px;
+   border: none;
+   border-bottom: 1px solid #ccc;
+   background: #fcfcfc;
+   width: 100%;
+   caret-color: var(--main-color);
+}
+.discount form *:focus{
+   outline: none;
+}
+.discount .form textarea{
+   resize: none;
+   height: 200px;
+}
+.discount .form input[type="submit"]{
+   border: none;
+   background-color: var(--main-color);
+   color: white;
+   font-weight: bold;
+   font-size: 20px;
+   cursor: pointer;
+   transition: var(--main-transition);
+}
+.discount .form input[type="submit"]:hover{
+   background-color: var(--main-color-alt);
+}
+@media (max-width: 991px){
+   .discount .image{
+      min-width: 100%;
+   }
+   .discount .form{
+      min-width: 100%;
+   }
+   .discount .form .content{
+      width: 50%;
+      padding: 30px 40px;
+   }
+}
+/* End Discount */
+
+.footer{
+   padding-top: calc(var(--main-padding-top) / 2);
+   padding-bottom: calc(var(--main-padding-bottom) / 2);
+   background-color: #191919;
+   color: white;
+}
+.footer .container{
+   display: grid;
+   grid-template-columns: repeat(auto-fill , minmax(250px , 1fr));
+   gap: 40px;
+}
+.footer .container .box h2{
+   font-size: 50px;
+   margin: 0;
+}
+.footer .container .box .icons{
+   display: flex;
+   margin: 20px 0;
+   gap: 10px;
+}
+.footer .container .box .icons a{
+   background: #313131;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color: white;
+   width: 50px;
+   height: 50px;
+   transition: var(--main-transition);
+}
+.footer .container .box .icons a:nth-of-type(1):hover{
+   background-color: #1877F4;
+}
+.footer .container .box .icons a:nth-of-type(2):hover{
+   background-color: #1da1f2;
+}
+.footer .container .box .icons a:nth-of-type(3):hover{
+   background-color: red;
+}
+.footer .container .box p{
+   color: #b9b9b9;
+   line-height: 2;
+}
+.footer .container ul li a{
+   padding: 15px;
+   display: block;
+   color: #b9b9b9;
+   position: relative;
+   transition: var(--main-transition);
+}
+.footer .container ul li a:hover{
+   padding-left: 25px;
+   color: white;
+}
+.footer .container ul li:not(:last-child){
+   border-bottom: 1px solid #444;
+}
+.footer .container ul li a::before{
+   font-family: "Font Awesome 5 Free";
+   content: "\f101";
+   font-weight: bold;
+   color: var(--main-color);
+   margin-right: 10px;
+   position: relative;
+   left: -10px;
+}
+.footer .container .location .bar{
+   display: flex;
+   margin-bottom: 40px;
+   align-items: center;
+}
+.footer .container .location .bar i{
+   margin-right: 20px;
+   color: var(--main-color);
+   font-size: 25px;
+}
+.footer .container .location .bar span{
+   color: #b9b9b9;
+   line-height: 1.7;
+   flex: 1;
+}
+.footer .container .images {
+   display: flex;
+   flex-wrap: wrap;
+   gap: 8px;
+   align-content: flex-start;
+}
+.footer .container .images img{
+   width: 78px;
+   border: 3px solid white;
+}
+@media (max-width: 767px){
+   .footer .container{
+      text-align: center;
+   }
+   .footer .container .box .icons{
+      justify-content: center;
+   }
+   .footer .container .location .bar{
+      flex-direction: column;
+      margin-bottom: 30px;
+   }
+   .footer .container .location .bar i{
+      margin: 20px auto;
+   }
+   .footer .container .images{
+      justify-content: center;
+   }
+}
+.feet{
+   text-align: center;
+   background-color: #191919;
+   color: white;
+   padding: 25px;
+   border-top: 1px solid #313131;
+}
+/* End Footer */
 /* Start Animations */
 
 @keyframes popup {
@@ -1283,6 +1602,15 @@ width: fit-content;
       width: 51%;
       height: 100%;
       top: 0;
+   }
+}
+
+@keyframes background-change {
+   0% , 100% {
+      background-image: url(../pictures/discount-background\(1\).jpg);
+   }
+   50%{
+      background-image: url(../pictures/discount-background.jpg) ;
    }
 }
 /* End Animations */
